--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "npx prettier . --write",
+    "dev": "node --run start -- --watch",
+    "start": "node src/app.js",
+    "lint": "npx eslint ."
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "eslint": "^9.30.1",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "prettier": "3.6.2"
   }
 }
