--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "prettier": "npx prettier . --write",
@@ -25,5 +25,8 @@
     "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "prettier": "3.6.2"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
